--- a/GPT-Comparison/GPT_Model_comparison_code_2.ipynb
+++ b/GPT-Comparison/GPT_Model_comparison_code_2.ipynb
@@ -84,7 +84,7 @@
     "tags": []
    },
    "source": [
-    "## Uploade questions, connect with chatGPT and get answers"
+    "## Upload questions, connect with chatGPT and get answers"
    ]
   },
   {
